Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body, html {
 }
 
 
+@media screen and (max-width: 800px) {
+   .hero-image{
+    padding-left:1%;
+    padding-right:1%
+}
+
+}
+
+
 /* Place text in the middle of the image */
 .hero-text {
   text-align: center;
